<resources>
    <string name="app_name">JankenMobile</string>
    <string name="kertas">Kertas</string>
    <string name="gunting">Gunting</string>
    <string name="batu">Batu</string>
    <string name="player_1">Player 1</string>
    <string name="option_gunting">option gunting</string>
    <string name="option_kertas">option_kertas</string>
    <string name="option_batu">option batu</string>
    <string name="versus">Vs</string>
    <string name="com">COM</string>
    <string name="refresh_image">Refresh image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_1">Bermain suit melawan pemain</string>
    <string name="hello_blank_fragment_2">Bermain suit melawan komputer</string>
    <string name="hello_blank_fragment_3">Tuliskan namamu dibawah</string>
    <string name="image_from_url">Kertas Gunting Batu</string>
</resources>